[package]
name = "ras-input-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# Linux OS-input backend (ADR-070, implements ADR-054/055). Implements the `ras-control::OsInputSink`
# trait over the X11 XTEST extension via the pure-Rust `x11rb` client. Deliberately UNPRIVILEGED: it
# connects to $DISPLAY as the logged-in user (no root, no /dev/uinput), so it works only inside an X11
# / Xwayland session and cannot reach the Wayland desktop or a locked greeter. `uinput` + libei paths
# are additive follow-ups behind the same trait (docs/19 §3).

[dependencies]
ras-control = { path = "../ras-control" }
ras-protocol = { path = "../ras-protocol" }

# XTEST bindings are Linux-only: on other targets this crate compiles to an empty lib so
# `cargo build --workspace` stays green on macOS/Windows CI. `x11rb` is pure-Rust (no C X11 libs);
# `input-linux` (uinput backend) is a thin safe wrapper over the kernel ioctls (only the fd-from-file
# bridge is `unsafe`) — both are MIT (Inv 18 OK).
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false, features = ["xtest"] }
# uinput virtual-device backend (docs/19 §3 — the Wayland-capable path below the display server). MIT.
input-linux = "0.7.1"

# This crate now carries a minimal FFI edge (OwnedFd::from_raw_fd in the uinput backend), so — like
# `ras-input-macos` — it re-declares the workspace lint set with `unsafe_code` relaxed. The `unsafe` is
# confined to that single fd bridge and wrapped behind the safe `OsInputSink` surface (CONTRIBUTING §5);
# the X11 path stays `unsafe`-free.
[lints.rust]
unsafe_code = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
