[package]
name = "ras-media"
description = "Casual RAS media pipeline traits: capture, encode, decode, render."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1"
ras-protocol = { path = "../ras-protocol" }

[lints]
workspace = true
