[package]
name = "ras-policy"
description = "Casual RAS local policy: capability intersection and consent/duration rules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
