[package]
name = "ras-protocol"
description = "Casual RAS wire protocol types, versioning, and the stable error taxonomy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1"

[lints]
workspace = true
