[package]
name = "ras-protocol"
description = "Casual RAS wire protocol types, versioning, and the stable error taxonomy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1"
prost = "0.14"          # runtime Message trait; encode/decode of generated wire types

[build-dependencies]
protox = "0.9"          # pure-Rust protoc replacement: .proto -> FileDescriptorSet (no system protoc)
prost-build = "0.14"    # FileDescriptorSet -> Rust source (compile_fds path never invokes protoc)

[lints]
workspace = true
